COMPILE_DEFINITIONS property: ensure leading -D is removed in all cases

Fixes: #24186